--- a/Vertx-EventBus-3.6/build.gradle
+++ b/Vertx-EventBus-3.6/build.gradle
@@ -4,8 +4,8 @@
 apply plugin: 'java'
 
 dependencies {
-   compile 'io.vertx:vertx-core:3.6.0'
-   compile fileTree(include: ['*.jar'], dir: '../lib')
+   implementation 'io.vertx:vertx-core:3.6.0'
+   implementation fileTree(include: ['*.jar'], dir: '../libs')
 
    // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.0.0'
