--- a/Vertx-EventBus-3.8/build.gradle
+++ b/Vertx-EventBus-3.8/build.gradle
@@ -4,13 +4,13 @@
 apply plugin: 'java'
 
 dependencies {
-   compile 'io.vertx:vertx-core:3.8.0'
+   implementation 'io.vertx:vertx-core:3.8.0'
 
    // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.0.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.0.0'
 
-   implementation fileTree(include: ['*.jar'], dir: '../lib')
+   implementation fileTree(include: ['*.jar'], dir: '../libs')
 }
 
 jar {
@@ -24,7 +24,7 @@ jar {
 
 verifyInstrumentation {
   	passes('io.vertx:vertx-core:[3.8.0,4.0.0)') {
-  		compile('com.newrelic.agent.java:newrelic-agent:6.0.0')
+  		implementation('com.newrelic.agent.java:newrelic-agent:6.0.0')
   	}
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
