--- a/Vertx-EventBus-3.8/build.gradle
+++ b/Vertx-EventBus-3.8/build.gradle
@@ -23,10 +23,11 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes('io.vertx:vertx-core:[3.8.0,4.0.0)') {
-  		implementation('com.newrelic.agent.java:newrelic-agent:6.0.0')
+  	passes ('io.vertx:vertx-core:[3.8.0,)' ) {
+  	  compile('com.newrelic.agent.java:newrelic-agent:6.0.0')
   	}
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
   	excludeRegex '.*Beta.*'
+  	excludeRegex '.*CR.*'
 }
