--- a/Vertx-EventBus-3.7.1/build.gradle
+++ b/Vertx-EventBus-3.7.1/build.gradle
@@ -24,9 +24,10 @@ jar {
 }
 
 verifyInstrumentation {
-  // Verifier plugin documentation:
-  // https://github.com/newrelic/newrelic-gradle-verify-instrumentation
-  // Example:
-  // passes 'javax.servlet:servlet-api:[2.2,2.5]'
-  // exclude 'javax.servlet:servlet-api:2.4.public_draft'
+  	passes ('io.vertx:vertx-core:[3.7.1,3.8.0)' ) {
+  	  compile('com.newrelic.agent.java:newrelic-agent:6.0.0')
+  	}
+  	excludeRegex '.*SNAPSHOT'
+  	excludeRegex '.*milestone.*'
+  	excludeRegex '.*Beta.*'
 }
