--- a/Vertx-EventBus-3.7.1/build.gradle
+++ b/Vertx-EventBus-3.7.1/build.gradle
@@ -24,7 +24,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[3.7.1,3.8.0)' ) {
+  	passes ('io.vertx:vertx-core:[3.7.1,3.8.0]' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.0.0')
   	}
   	excludeRegex '.*SNAPSHOT'
