clean up on EventBus, redo of instrumenting Verticles

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,4 @@ include 'Vertx-EventBus-3.5'
 include 'Vertx-EventBus-3.6'
 include 'Vertx-EventBus-3.7.1'
 include 'Vertx-EventBus-3.8'
-include 'Vertx-Verticles'
+include 'Vertx-Verticle-Finder'
