--- a/Vertx-EventBus-3.8/build.gradle
+++ b/Vertx-EventBus-3.8/build.gradle
@@ -11,6 +11,9 @@ dependencies {
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
 
    implementation fileTree(include: ['*.jar'], dir: '../libs')
+   
+   testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
+   testImplementation 'io.vertx:vertx-hazelcast:3.8.0'
 }
 
 jar {
@@ -23,10 +26,11 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[3.8.0,3.9.4]' ) {
+  	passes ('io.vertx:vertx-core:[3.8.0,4.0.0)' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
   	}
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
   	excludeRegex '.*Beta.*'
+  	excludeRegex '.*CR[0-9].*'
 }
