--- a/Vertx-EventBus-3.6/build.gradle
+++ b/Vertx-EventBus-3.6/build.gradle
@@ -8,11 +8,14 @@ dependencies {
    implementation fileTree(include: ['*.jar'], dir: '../libs')
 
    // New Relic Java Agent dependencies
-   implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
-   implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
+   implementation 'com.newrelic.agent.java:newrelic-agent:6.4.1'
+   implementation 'com.newrelic.agent.java:newrelic-api:6.4.1'
    
+   
+   testImplementation 'junit:junit:4.12'
    testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
    testImplementation 'io.vertx:vertx-hazelcast:3.6.0'
+   testImplementation fileTree(include: ['*.jar'], dir: '../test-lib')
    
 }
 
