--- a/Vertx-EventBus-4.0/build.gradle
+++ b/Vertx-EventBus-4.0/build.gradle
@@ -1,26 +1,24 @@
 
-// Build.gradle generated for instrumentation module Vertx-EventBus-3.7.1
+// Build.gradle generated for instrumentation module Vertx-EventBus-3.8
 
 apply plugin: 'java'
 
 dependencies {
-	implementation 'io.vertx:vertx-core:3.7.1'
-		
+   implementation 'io.vertx:vertx-core:4.0.0'
 
    // New Relic Java Agent dependencies
-   implementation 'com.newrelic.agent.java:newrelic-agent:6.4.1'
-   implementation 'com.newrelic.agent.java:newrelic-api:6.4.1'
+   implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
+   implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
 
    implementation fileTree(include: ['*.jar'], dir: '../libs')
    
    testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
-   testImplementation 'io.vertx:vertx-hazelcast:3.7.1'
-   
+   testImplementation 'io.vertx:vertx-hazelcast:3.8.0'
 }
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'Vertx-EventBus-3.7.1.Vertx-EventBus-3.7.1'
+    attributes 'Implementation-Title': 'Vertx-EventBus-3.8.Vertx-EventBus-4.0'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.Labs'
     attributes 'Implementation-Version': 1.0
@@ -28,10 +26,11 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[3.7.1,3.8.0]' ) {
+  	passes ('io.vertx:vertx-core:[4.0.0]' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
   	}
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
   	excludeRegex '.*Beta.*'
+  	excludeRegex '.*CR[0-9].*'
 }
