--- a/settings.gradle
+++ b/settings.gradle
@@ -1,15 +1,8 @@
-plugins {
-    id 'com.alexvasilkov.git-dependencies' version '2.0.1'
-}
-git {
-    fetch 'https://github.com/newrelic/newrelic-java-agent.git', {
-        dir "$rootDir/newrelic-agent/"
-        tag 'v6.4.0'
-    }
-}
 rootProject.name = 'vertx-eventbus'
 include 'Vertx-EventBus-3.5'
 include 'Vertx-EventBus-3.6'
 include 'Vertx-EventBus-3.7.1'
 include 'Vertx-EventBus-3.8'
+include 'Vertx-EventBus-4.0'
 include 'Vertx-Verticle-Finder'
+include 'Vertx-Verticles'
