--- a/Vertx-EventBus-3.7.1/build.gradle
+++ b/Vertx-EventBus-3.7.1/build.gradle
@@ -13,8 +13,10 @@ dependencies {
 
    implementation fileTree(include: ['*.jar'], dir: '../libs')
    
+   testImplementation 'junit:junit:4.12'
    testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
-   testImplementation 'io.vertx:vertx-hazelcast:3.7.1'
+   testImplementation 'io.vertx:vertx-hazelcast:3.6.0'
+   testImplementation fileTree(include: ['*.jar'], dir: '../test-lib')
    
 }
 
