updated instrumentation to work with version 4.2.2 and later

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include 'Vertx-EventBus-3.8'
 include 'Vertx-EventBus-4.0'
 include 'Vertx-Verticle-Finder'
 include 'Vertx-Verticles'
+include 'Vertx-EventBus-4.2.2'
