updated to cover latest versions of the Event Bus

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include 'Vertx-EventBus-4.0'
 include 'Vertx-Verticle-Finder'
 include 'Vertx-Verticles'
 include 'Vertx-EventBus-4.2.2'
+include 'Vertx-EventBus-4.3.2'
