--- a/Vertx-EventBus-4.3.2/build.gradle
+++ b/Vertx-EventBus-4.3.2/build.gradle
@@ -4,7 +4,7 @@
 apply plugin: 'java'
 
 dependencies {
-   implementation 'io.vertx:vertx-core:4.2.2'
+   implementation 'io.vertx:vertx-core:4.3.2'
 
    // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
@@ -20,7 +20,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.Vertx-EventBus-4.2.2'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.Vertx-EventBus-4.3.2'
     attributes 'Implementation-Vendor': 'New Relic'
     attributes 'Implementation-Vendor-Id': 'com.newrelic'
     attributes 'Implementation-Version': 1.0
@@ -28,7 +28,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[4.2.2,4.3.2)' ) {
+  	passes ('io.vertx:vertx-core:[4.3.2,)' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
   	}
   	excludeRegex '.*SNAPSHOT'
