--- a/Vertx-EventBus-3.5/build.gradle
+++ b/Vertx-EventBus-3.5/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 dependencies {
     implementation group: 'io.vertx', name: 'vertx-mongo-client', version: '3.5.3'
 
-   // New Relic Java Agent dependencies
+   // New Relic Labs Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.1'
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.1'
    implementation fileTree(include: ['*.jar'], dir: '../libs')
@@ -14,9 +14,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-3.5'
-    attributes 'Implementation-Vendor': 'New Relic Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.labs.Vertx-EventBus-3.5'
+    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
     attributes 'Implementation-Version': 1.0
   }
 }
