--- a/Vertx-EventBus-4.3.2/build.gradle
+++ b/Vertx-EventBus-4.3.2/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 dependencies {
    implementation 'io.vertx:vertx-core:4.3.2'
 
-   // New Relic Java Agent dependencies
+   // New Relic Labs Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
    implementation fileTree(include: ['*.jar'], dir: '../libs')
@@ -20,9 +20,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.3.2'
-    attributes 'Implementation-Vendor': 'New Relic Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.labs.Vertx-EventBus-4.3.2'
+    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
     attributes 'Implementation-Version': 1.0
   }
 }
