--- a/Vertx-EventBus-3.7.1/build.gradle
+++ b/Vertx-EventBus-3.7.1/build.gradle
@@ -22,9 +22,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.labs.Vertx-EventBus-3.7.1'
-    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-3.7.1'
+    attributes 'Implementation-Vendor': 'New Relic Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
   }
 }
