--- a/Vertx-EventBus-4.3.2/build.gradle
+++ b/Vertx-EventBus-4.3.2/build.gradle
@@ -20,9 +20,9 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.labs.Vertx-EventBus-4.3.2'
-    attributes 'Implementation-Vendor': 'New Relic Labs Labs'
-    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs.labs'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.3.2'
+    attributes 'Implementation-Vendor': 'New Relic Labs'
+    attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
   }
 }
