added support for 4.5.0

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,4 @@ include 'Vertx-Verticle-Finder'
 include 'Vertx-Verticles'
 include 'Vertx-EventBus-4.2.2'
 include 'Vertx-EventBus-4.3.2'
+include 'Vertx-EventBus-4.5'
