--- a/Vertx-EventBus-4.5/build.gradle
+++ b/Vertx-EventBus-4.5/build.gradle
@@ -4,9 +4,9 @@
 apply plugin: 'java'
 
 dependencies {
-   implementation 'io.vertx:vertx-core:4.3.2'
+   implementation 'io.vertx:vertx-core:4.5.0'
 
-   // New Relic Labs Java Agent dependencies
+   // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
    implementation fileTree(include: ['*.jar'], dir: '../libs')
@@ -20,7 +20,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.3.2'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.5'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
@@ -28,8 +28,8 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[4.3.2,4.5.0)' ) {
-  	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
+  	passes ('io.vertx:vertx-core:[4.5.0,)' ) {
+  	  compile('com.newrelic.agent.java:newrelic-agent:6.5.0')
   	}
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
