--- a/Vertx-EventBus-4.5.1/build.gradle
+++ b/Vertx-EventBus-4.5.1/build.gradle
@@ -4,7 +4,7 @@
 apply plugin: 'java'
 
 dependencies {
-   implementation 'io.vertx:vertx-core:4.5.0'
+   implementation 'io.vertx:vertx-core:4.5.1'
 
    // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
@@ -20,7 +20,7 @@ dependencies {
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.5'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.5.1'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
@@ -28,9 +28,10 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[4.5.0]' ) {
-  	  compile('com.newrelic.agent.java:newrelic-agent:6.5.0')
-  	}
+ // 	passes ('io.vertx:vertx-core:[4.5.1,)' ) {
+ // 	  compile('com.newrelic.agent.java:newrelic-agent:6.5.0')
+ // 	}
+	passes 'io.vertx:vertx-core:[4.5.1,)'
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
   	excludeRegex '.*Beta.*'
