--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include 'Vertx-Verticles'
 include 'Vertx-EventBus-4.2.2'
 include 'Vertx-EventBus-4.3.2'
 include 'Vertx-EventBus-4.5'
+include 'Vertx-EventBus-4.5.1'
