added support for EventBus 5.0

--- a/Vertx-EventBus-4.5.1/build.gradle
+++ b/Vertx-EventBus-4.5.1/build.gradle
@@ -28,7 +28,7 @@ jar {
 }
 
 verifyInstrumentation {
-	passes 'io.vertx:vertx-core:[4.5.1,5.0.0)'
+	passesOnly 'io.vertx:vertx-core:[4.5.1,5.0.0)'
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
   	excludeRegex '.*Beta.*'
