--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'Vertx-EventBus-4.2.2'
 include 'Vertx-EventBus-4.3.2'
 include 'Vertx-EventBus-4.5'
 include 'Vertx-EventBus-4.5.1'
+include 'Vertx-EventBus-5.0.0'
