--- a/Vertx-EventBus-3.5/build.gradle
+++ b/Vertx-EventBus-3.5/build.gradle
@@ -22,7 +22,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes 'io.vertx:vertx-core:[3.5.0,3.5.4]'
+  	passesOnly 'io.vertx:vertx-core:[3.5.0,3.5.4]'
   	excludeRegex '.*SNAPSHOT.*'
   	excludeRegex '.*milestone.*'
  	excludeRegex '.*CR.*'
