--- a/Vertx-EventBus-3.6/build.gradle
+++ b/Vertx-EventBus-3.6/build.gradle
@@ -29,7 +29,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[3.6.0,3.7.1)') {
+  	passesOnly ('io.vertx:vertx-core:[3.6.0,3.7.1)') {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
   	}
    	excludeRegex '.*SNAPSHOT.*'
