--- a/Vertx-EventBus-3.8/build.gradle
+++ b/Vertx-EventBus-3.8/build.gradle
@@ -28,7 +28,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[3.8.0,4.0.0)' ) {
+  	passesOnly ('io.vertx:vertx-core:[3.8.0,4.0.0)' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
   	}
   	excludeRegex '.*SNAPSHOT'
