--- a/Vertx-EventBus-4.2.2/build.gradle
+++ b/Vertx-EventBus-4.2.2/build.gradle
@@ -28,7 +28,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[4.2.2,4.3.2)' ) {
+  	passesOnly ('io.vertx:vertx-core:[4.2.2,4.3.2)' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
   	}
   	excludeRegex '.*SNAPSHOT'
