--- a/Vertx-EventBus-4.5/build.gradle
+++ b/Vertx-EventBus-4.5/build.gradle
@@ -28,7 +28,7 @@ jar {
 }
 
 verifyInstrumentation {
-  	passes ('io.vertx:vertx-core:[4.5.0]' ) {
+  	passesOnly ('io.vertx:vertx-core:[4.5.0]' ) {
   	  compile('com.newrelic.agent.java:newrelic-agent:6.5.0')
   	}
   	excludeRegex '.*SNAPSHOT'
