--- a/Vertx-EventBus-5.0.0/build.gradle
+++ b/Vertx-EventBus-5.0.0/build.gradle
@@ -1,26 +1,26 @@
 
-// Build.gradle generated for instrumentation module Vertx-EventBus-3.8
+// Build.gradle generated for instrumentation module Vertx-EventBus-4.2.2
 
 apply plugin: 'java'
 
 dependencies {
-   implementation 'io.vertx:vertx-core:4.0.0'
+   implementation 'io.vertx:vertx-core:5.0.0'
 
-   // New Relic Labs Java Agent dependencies
+   // New Relic Java Agent dependencies
    implementation 'com.newrelic.agent.java:newrelic-agent:6.4.0'
    implementation 'com.newrelic.agent.java:newrelic-api:6.4.0'
-
    implementation fileTree(include: ['*.jar'], dir: '../libs')
    
    testImplementation 'junit:junit:4.12'
    testImplementation 'org.nanohttpd:nanohttpd:2.3.1'
    testImplementation 'io.vertx:vertx-hazelcast:3.6.0'
    testImplementation fileTree(include: ['*.jar'], dir: '../test-lib')
+
 }
 
 jar {
   manifest {
-    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-4.0'
+    attributes 'Implementation-Title': 'com.newrelic.instrumentation.labs.Vertx-EventBus-5.0.0'
     attributes 'Implementation-Vendor': 'New Relic Labs'
     attributes 'Implementation-Vendor-Id': 'com.newrelic.labs'
     attributes 'Implementation-Version': 1.0
@@ -28,11 +28,10 @@ jar {
 }
 
 verifyInstrumentation {
-  	passesOnly ('io.vertx:vertx-core:[4.0.0,4.2.2)' ) {
-  	  compile('com.newrelic.agent.java:newrelic-agent:6.4.0')
-  	}
+	passesOnly 'io.vertx:vertx-core:[5.0.0,)'
   	excludeRegex '.*SNAPSHOT'
   	excludeRegex '.*milestone.*'
   	excludeRegex '.*Beta.*'
   	excludeRegex '.*CR[0-9].*'
+
 }
